cli/src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__operation_directives__unknown_variable.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 1,
            column: 45,
            file: 0,
            builtin: false,
        },
        message: UnknownVariable {
            name: "b",
        },
        additional_info: [],
    },
    CheckError {
        position: Pos {
            line: 3,
            column: 32,
            file: 0,
            builtin: false,
        },
        message: UnknownVariable {
            name: "b",
        },
        additional_info: [],
    },
    CheckError {
        position: Pos {
            line: 5,
            column: 59,
            file: 0,
            builtin: false,
        },
        message: UnknownVariable {
            name: "b2",
        },
        additional_info: [],
    },
    CheckError {
        position: Pos {
            line: 6,
            column: 36,
            file: 0,
            builtin: false,
        },
        message: UnknownVariable {
            name: "b2",
        },
        additional_info: [],
    },
]
